updates to json structure, js parser and layout styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Delorean</title>
 	<link rel="stylesheet" href="assets/css/delorean.css?v=1">
+	<link rel="stylesheet" href="assets/css/ptrns.css?v=1">
 </head>
 <body>
 	<section class="header">
@@ -12,9 +13,24 @@
 	
 	<section>
 		<div class="inner">
+			<div class="qnav"></div>
 			<div class="dlrn">
 				<p>0 / 1.21 gWe</p>
 				<p>running low on plutonium 252</p>
+			</div>
+			<div class="timeline">
+				<div class="scrubber">
+					<div class="gap"></div>
+					<div class="gap"></div>
+					<div class="gap"></div>
+					<div class="gap"></div>
+					<div class="gap"></div>
+					<div class="gap"></div>
+					<div class="gap"></div>
+					<div class="gap"></div>
+					<div class="gap"></div>
+					<div class="gap"></div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -22,6 +38,7 @@
 	
 	
 	<script type="text/javascript" src="assets/js/jquery-1.8.0.min.js"></script>
+	<script src="assets/js/zen.js"></script>
 	<script src="assets/js/delorean.js"></script>
 </body>
 </html>
