--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 	
 	<section>
 		<div class="inner">
-			<div class="qnav"></div>
+			
 			<div class="dlrn">
 				<p>0 / 1.21 gWe</p>
 				<p>running low on plutonium 252</p>
 			</div>
-			<div class="timeline">
+			<!--
+<div class="timeline">
 				<div class="scrubber">
 					<div class="gap"></div>
 					<div class="gap"></div>
@@ -32,12 +33,15 @@
 					<div class="gap"></div>
 				</div>
 			</div>
+-->
 		</div>
 	</section>
 	
 	
 	
 	<script type="text/javascript" src="assets/js/jquery-1.8.0.min.js"></script>
+	<script type="text/javascript" src="assets/js/jquery-ui-1.8.23.custom.min.js"></script>
+	
 	<script src="assets/js/zen.js"></script>
 	<script src="assets/js/delorean.js"></script>
 </body>
